# crankyankerv2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  api-docs.html  get.http  openapi.json  pyproject.toml  pytest.ini
.github/workflows/: generate-docs.yml  test.yml
ai_specs/: openapi_implementation_plan.md
app/: main.py
app/core/: config.py
app/models/: responses.py
app/training_plan/: plan.py
scripts/http/: get.http
src/app/: app.py  get.http
src/app/training_plan/: plan.py
src/scripts/: create_sample_plan.py
src/tests/: test_plan.py
tests/: test_plan.py
