[project]
name = "fast-gun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "uvicorn>=0.34.2",
]

[tool.pytest]
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = "-v"
